# review-tally

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  RELEASE_NOTES_0.5.4.md  main.py  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  publish.yml
cli/: parse_cmd_line.py
github_review_counter/: main.py
github_review_counter/cli/: parse_cmd_line.py
github_review_counter/queries/: get_prs.py  get_repos_gql.py
graph-queries/: express-prs.graphql  get-org-repos.gql  pull-request.graphql
pr_reviews/: main.py
pr_reviews/cli/: parse_cmd_line.py
pr_reviews/queries/: get_prs.py  get_repos_gql.py  get_repos_rest.py  get_reviewers_rest.py  local_exceptions.py
queries/: get_prs.py  get_repos_gql.py  get_repos_rest.py  get_reviewers_rest.py
reviewtally/: data_collection.py  main.py  output_formatting.py
reviewtally/analysis/: team_metrics.py
reviewtally/cache/: __init__.py  cache_keys.py  cache_manager.py  sqlite_cache.py
reviewtally/cli/: parse_cmd_line.py
reviewtally/exceptions/: local_exceptions.py
reviewtally/exporters/: sprint_export.py
reviewtally/queries/: __init__.py  get_prs.py  get_repos_gql.py  get_reviewers_rest.py
reviewtally/visualization/: individual_plot.py  sprint_plot.py
tests/: __init__.py  async_test_notes.md  constants.py  mock_http.py  test_generate_results_table.py  test_get_prs.py  test_get_repos_gql.py  test_get_reviewers_rest.py  test_get_reviewers_rest_cls.py  test_get_reviewers_rest_fetch.py  test_get_reviewers_rest_fetch_batch.py  test_missing_submitted_at_main.py  test_rubber_stamp_collection.py  utils.py
tests/analysis/: test_sprint_periods.py  test_team_metrics.py
tests/cache/: __init__.py  test_pr_metadata_date_range.py
tests/cli/: test_parse_cmd_line.py
tests/fixtures/: fixtures_reviews_response.py  multiple_reviews_response.json  review_comments_response.json  reviews_missing_submitted_at.json  rubber_stamp_reviews_response.json
tests/get_reviewers/: test_get_reviewers_rest.py  test_get_reviewers_rest_fetch.py  test_get_reviewers_rest_fetch_batch.py  test_get_reviewers_rest_pull_requests.py  (+2 more)
(+4 files in other folders)
