[tool.poetry]
name = "pr-reviews"
version = "0.1.0"
description = ""
authors = ["ghinks <ghinks@yahoo.com>"]
license = "Apache"
readme = "README.md"
packages = [
    { include = "pr_reviews/**/*" }
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.11.2"
requests = "^2.32.3"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pr-reviews = "pr_reviews.main:main"