[tool.poetry]
name = "pr-reviews"
version = "0.1.0"
description = "A tool to discover who is reviewing your organization's PRs"
authors = ["ghinks <ghinks@yahoo.com>"]
license = "Apache"
repository = "https://github.com/ghinks/pr-reviews"
readme = "README.md"
packages = [
    { include = "pr_reviews/**/*" }
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.11.2"
requests = "^2.32.3"
tabulate = "^0.9.0"
asyncio = "^3.4.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.4"
ruff = "^0.8.4"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pr-reviews = "pr_reviews.main:main"

[tool.ruff]
exclude =[ "venv", "pr_reviews/**", "tests/**"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D103", "D203", "D212"]